[gd_scene load_steps=13 format=3 uid="uid://c37k4vwbmc4ud"]

[ext_resource type="Texture2D" uid="uid://dg8727lhoue13" path="res://Assets/Screens/pressanykey01.png" id="2"]
[ext_resource type="Script" path="res://Scenes/TitleScreen.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dtgrfhpc2s1i4" path="res://Assets/PanoramaSky/A_pano_1.png" id="3_p5dlm"]
[ext_resource type="Texture2D" uid="uid://temjuvqe556" path="res://Assets/PanoramaSky/A_pano_2.png" id="4_kw41l"]
[ext_resource type="FontFile" uid="uid://dwl4nao2nwg3i" path="res://Assets/Fonts/ARCADE_I.TTF" id="6_y2y8l"]
[ext_resource type="FontFile" uid="uid://dlmtqe52fxopd" path="res://Assets/Fonts/ARCADE_N.TTF" id="7_nifqn"]

[sub_resource type="Gradient" id="Gradient_0tks5"]
interpolation_mode = 2
colors = PackedColorArray(0.262745, 0.0980392, 0.466667, 1, 0.0509804, 0.392157, 0.482353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wj8qd"]
gradient = SubResource("Gradient_0tks5")
width = 1024
height = 600
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Theme" id="Theme_f8p1r"]
default_font = ExtResource("6_y2y8l")
default_font_size = 98

[sub_resource type="Animation" id="Animation_d6f35"]
resource_name = "anykey"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnyKey:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5v2wa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnyKey:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prsmg"]
_data = {
"RESET": SubResource("Animation_5v2wa"),
"anykey": SubResource("Animation_d6f35")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("3")

[node name="Screen2" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_wj8qd")
centered = false

[node name="IceCreamLights" type="Node2D" parent="."]

[node name="IceCreams1" type="PointLight2D" parent="IceCreamLights"]
clip_children = 1
energy = 4.2
texture = ExtResource("3_p5dlm")
offset = Vector2(-492, 300)
texture_scale = 0.5

[node name="IceCreams2" type="PointLight2D" parent="IceCreamLights"]
clip_children = 1
energy = 3.5
texture = ExtResource("4_kw41l")
offset = Vector2(532, 300)
texture_scale = 0.5

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1024, 100)
offset_top = 50.0
offset_right = 1024.0
offset_bottom = 150.0
theme = SubResource("Theme_f8p1r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.262745, 0.0980392, 0.466667, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
text = "umbrosia"
horizontal_alignment = 1

[node name="SubTitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1024, 100)
offset_top = 250.0
offset_right = 1024.0
offset_bottom = 526.0
theme = SubResource("Theme_f8p1r")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.831373, 0.239216, 0.262745, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/line_spacing = 18
theme_override_fonts/font = ExtResource("7_nifqn")
theme_override_font_sizes/font_size = 30
text = "a food fight simulator
to promote a poetry book:
***The Amber in Ambrose***
by Jon Woodward"
horizontal_alignment = 1

[node name="AnyKey" type="Sprite2D" parent="."]
position = Vector2(0, 100)
texture = ExtResource("2")
centered = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_prsmg")
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
